--- a/collection_view/study_collection_view/en.lproj/MainStoryboard.storyboard
+++ b/collection_view/study_collection_view/en.lproj/MainStoryboard.storyboard
@@ -12,27 +12,29 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gIr-dg-4a0">
-                            <size key="itemSize" width="132" height="164"/>
+                            <size key="itemSize" width="131" height="181"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="1eu-CG-YDP" customClass="PhotoCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="132" height="164"/>
+                                <rect key="frame" x="0.0" y="0.0" width="131" height="181"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="132" height="164"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="131" height="181"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWx-YM-O34">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="110" id="2cB-To-3Qk"/>
-                                                <constraint firstAttribute="height" constant="132" id="cq1-2Z-Fnj"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5un-Zd-AbL">
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5un-Zd-AbL">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="41" id="w4Q-3N-bgr"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -40,10 +42,12 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="UWx-YM-O34" firstAttribute="leading" secondItem="1eu-CG-YDP" secondAttribute="leading" constant="10" id="5MC-iI-xyV"/>
-                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="centerX" secondItem="UWx-YM-O34" secondAttribute="centerX" type="default" id="Cre-oc-nZD"/>
-                                    <constraint firstAttribute="bottom" secondItem="5un-Zd-AbL" secondAttribute="bottom" constant="8" id="Mkj-J6-lO9"/>
-                                    <constraint firstItem="UWx-YM-O34" firstAttribute="top" secondItem="1eu-CG-YDP" secondAttribute="top" type="default" id="dq8-8u-O3c"/>
+                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="centerX" secondItem="1eu-CG-YDP" secondAttribute="centerX" type="default" id="24D-mr-5dm"/>
+                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="bottom" secondItem="1eu-CG-YDP" secondAttribute="bottom" type="default" id="4Oz-ow-GgQ"/>
+                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="leading" secondItem="UWx-YM-O34" secondAttribute="leading" type="default" id="Kww-P5-8t6"/>
+                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="top" secondItem="UWx-YM-O34" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="NMD-dW-m52"/>
+                                    <constraint firstItem="UWx-YM-O34" firstAttribute="top" secondItem="1eu-CG-YDP" secondAttribute="top" type="default" id="PO4-Lv-P7i"/>
+                                    <constraint firstItem="5un-Zd-AbL" firstAttribute="trailing" secondItem="UWx-YM-O34" secondAttribute="trailing" type="default" id="ScC-cL-7vh"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="imageView" destination="UWx-YM-O34" id="GK2-fo-afV"/>
