--- a/collection_view/study_collection_view/en.lproj/MainStoryboard.storyboard
+++ b/collection_view/study_collection_view/en.lproj/MainStoryboard.storyboard
@@ -7,7 +7,7 @@
         <!--Left Nav View Controller-->
         <scene sceneID="jYz-2Z-MJR">
             <objects>
-                <tableViewController storyboardIdentifier="leftController" id="kMp-N5-ivY" customClass="LeftNavViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="leftController" wantsFullScreenLayout="YES" id="kMp-N5-ivY" customClass="LeftNavViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" alpha="0.90000000000000002" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ebW-rw-bMd">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,12 +22,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oox-0F-q0m">
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oox-0F-q0m">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="xgL-Qg-I31"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="15"/>
-                                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <state key="normal" title="热点">
                                                         <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -51,7 +50,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYC-wo-WhO">
+                                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYC-wo-WhO">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="gU5-HP-3R6"/>
                                                     </constraints>
@@ -80,7 +79,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I5x-IL-NIN">
+                                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I5x-IL-NIN">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="dSf-0i-nmg"/>
                                                     </constraints>
@@ -109,7 +108,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijp-gf-4tm">
+                                                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijp-gf-4tm">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="v6j-aQ-u2Y"/>
                                                     </constraints>
@@ -138,7 +137,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Kh-NQ-bCA">
+                                                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Kh-NQ-bCA">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="rSj-u9-rNd"/>
                                                     </constraints>
@@ -167,7 +166,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVM-id-fIi">
+                                                <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVM-id-fIi">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="PHd-ps-cm0"/>
                                                     </constraints>
@@ -196,7 +195,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="37o-H1-g6p">
+                                                <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="37o-H1-g6p">
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="qxr-mJ-Vqr"/>
                                                     </constraints>
@@ -243,9 +242,9 @@
         <!--Photo Collection View Controller-->
         <scene sceneID="lf5-3y-Ogh">
             <objects>
-                <collectionViewController storyboardIdentifier="contentController" wantsFullScreenLayout="YES" hidesBottomBarWhenPushed="YES" clearsSelectionOnViewWillAppear="NO" id="qGB-ax-Nun" customClass="PhotoCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="contentController" wantsFullScreenLayout="YES" id="qGB-ax-Nun" customClass="PhotoCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="mZm-jd-djz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewLayout key="collectionViewLayout" id="Tru-ox-nVv" customClass="VideosLayout"/>
                         <cells>
@@ -294,9 +293,6 @@
                             <outlet property="delegate" destination="qGB-ax-Nun" id="CeW-sC-1l6"/>
                         </connections>
                     </collectionView>
-                    <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <nil key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oDO-rW-D60" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -305,15 +301,12 @@
         <!--Video Relate Controller-->
         <scene sceneID="YwQ-dz-eWV">
             <objects>
-                <viewController wantsFullScreenLayout="YES" hidesBottomBarWhenPushed="YES" id="AW1-Hs-i3O" customClass="VideoRelateController" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" id="AW1-Hs-i3O" customClass="VideoRelateController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oJP-yY-GhX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qhe-tg-OR3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -322,7 +315,7 @@
         <!--Detail Video View Controller-->
         <scene sceneID="UT3-En-0GP">
             <objects>
-                <viewController id="4ua-QP-VZj" customClass="DetailVideoViewController" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" id="4ua-QP-VZj" customClass="DetailVideoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FG9-5c-rvn">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -352,60 +345,6 @@
             <point key="canvasLocation" x="212" y="-1083"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="DetailVideoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailVideoViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="close:"/>
-            </relationships>
-        </class>
-        <class className="LeftNavViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LeftNavViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="cutBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="funBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="hotBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="movBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="mucBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="tvsBut" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="yulBut" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="PhotoCollectionViewCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoCollectionViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="PhotoCollectionViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoCollectionViewController.h"/>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-        <class className="VideoRelateController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VideoRelateController.h"/>
-        </class>
-        <class className="VideosLayout" superclassName="UICollectionViewFlowLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VideosLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
